replace "go test  ./..."  with make test so that we don't need to update workflows/go.yml if/when we change the test target.
Co-authored-by: Serhii Leshchenko <sleshche@redhat.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,7 +34,7 @@ jobs:
       run: go build main.go
     
     - name: Run Go Tests
-      run: go test ./...
+      run: make test
 
     - name: Check format
       run: |
@@ -44,4 +44,3 @@ jobs:
           echo "not well formatted sources are found"
           exit 1
         fi
-
