First pass of filtering devfile obj via attributes
Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

--- a/devfile.yaml
+++ b/devfile.yaml
@@ -2,8 +2,9 @@ schemaVersion: 2.0.0
 metadata:
   name: nodejs
   version: 1.0.0
-  alpha.build-dockerfile: https://raw.githubusercontent.com/odo-devfiles/registry/master/devfiles/nodejs/build/Dockerfile
-  alpha.deployment-manifest: https://raw.githubusercontent.com/odo-devfiles/registry/master/devfiles/nodejs/deploy/deployment-manifest.yaml
+  attributes:
+    alpha.build-dockerfile: https://raw.githubusercontent.com/odo-devfiles/registry/master/devfiles/nodejs/build/Dockerfile
+    alpha.deployment-manifest: https://raw.githubusercontent.com/odo-devfiles/registry/master/devfiles/nodejs/deploy/deployment-manifest.yaml
 starterProjects:
 - name: nodejs-starter
   git:
@@ -11,6 +12,36 @@ starterProjects:
       origin: https://github.com/odo-devfiles/nodejs-ex.git
 components:
 - name: runtime
+  attributes:
+    first: a
+    last: c
+  container:
+    endpoints:
+    - name: http-3000
+      targetPort: 3000
+    image: registry.access.redhat.com/ubi8/nodejs-12:1-45
+    memoryLimit: 1024Mi
+    mountSources: true
+    sourceMapping: /project
+- name: runtime2
+  attributes:
+    name:
+      first: a
+    middle: b
+  container:
+    endpoints:
+    - name: http-3000
+      targetPort: 3000
+    image: registry.access.redhat.com/ubi8/nodejs-12:1-45
+    memoryLimit: 1024Mi
+    mountSources: true
+    sourceMapping: /project
+- name: runtime3
+  attributes:
+    first: maysun
+    names:
+      first: a
+      middle: b
   container:
     endpoints:
     - name: http-3000
@@ -28,6 +59,9 @@ commands:
       kind: build
     workingDir: /project
   id: install
+  attributes:
+    first: a
+    last: c
 - exec:
     commandLine: npm start
     component: runtime
@@ -36,6 +70,8 @@ commands:
       kind: run
     workingDir: /project
   id: run
+  attributes:
+    first: a
 - exec:
     commandLine: npm run debug
     component: runtime
