--- a/devfile.yaml
+++ b/devfile.yaml
@@ -5,7 +5,8 @@ metadata:
   attributes:
     alpha.build-dockerfile: /relative/path/to/Dockerfile
 parent:
-  uri: https://raw.githubusercontent.com/odo-devfiles/registry/master/devfiles/nodejs/devfile.yaml
+  # uri: https://raw.githubusercontent.com/odo-devfiles/registry/master/devfiles/nodejs/devfile.yaml
+  id: nodejs
   commands:
   - id: install
     exec:
