--- a/devfile.yaml
+++ b/devfile.yaml
@@ -7,6 +7,7 @@ metadata:
 parent:
   # uri: https://raw.githubusercontent.com/odo-devfiles/registry/master/devfiles/nodejs/devfile.yaml
   id: nodejs
+  registryUrl: "https://registry.devfile.io"
   commands:
   - id: install
     exec:
