Make resolving utility functions type agnostic
Make the utility functions used for resolving plugins by ID, URI, or
Kubernetes reference not depend on the PluginComponent type and instead
take the relevant information directly. This is required to allow
reusing these functions for resolving Devfile parents

Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/pkg/flatten/testdata/plugin-id/error_unparseable-url.yaml
+++ b/pkg/flatten/testdata/plugin-id/error_unparseable-url.yaml
@@ -9,4 +9,4 @@ input:
           registryUrl: ":/test-registry.io/subpath"
 
 output:
-  errRegexp: "failed to parse registry URL for plugin test-plugin"
+  errRegexp: "failed to parse registry URL for component test-plugin"
