Modify test struct names to accomodate parent tests
Rename plugin-related struct fields in tests to be generic, to allow
them to hold any resources referenced. Required for reusing these
structs cleanly in parent tests.

Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/pkg/flatten/testdata/k8s-ref/error_bad-plugin-merge.yaml
+++ b/pkg/flatten/testdata/k8s-ref/error_bad-plugin-merge.yaml
@@ -11,7 +11,7 @@ input:
             - name: non-existent
               container:
                 memoryLimit: 512Mi
-  plugins:
+  devworkspaceResources:
     override:
       spec:
         components:
