--- a/pkg/flatten/testdata/k8s-ref/error_conflicting-merge.yaml
+++ b/pkg/flatten/testdata/k8s-ref/error_conflicting-merge.yaml
@@ -10,7 +10,7 @@ input:
       - name: my-component
         container:
           image: test-image
-  plugins:
+  devworkspaceResources:
     test-plugin:
       spec:
         components:
