--- a/pkg/flatten/testdata/k8s-ref/error_plugin-references-self.yml
+++ b/pkg/flatten/testdata/k8s-ref/error_plugin-references-self.yml
@@ -7,7 +7,7 @@ input:
         plugin:
           kubernetes:
             name: plugin-a
-  plugins:
+  devworkspaceResources:
     plugin-a:
       kind: DevWorkspaceTemplate
       apiVersion: workspace.devfile.io/v1alpha2
