--- a/pkg/flatten/testdata/k8s-ref/web-terminal-with-plugin.yaml
+++ b/pkg/flatten/testdata/k8s-ref/web-terminal-with-plugin.yaml
@@ -16,7 +16,7 @@ input:
           kubernetes:
             name: web-terminal
             namespace: devworkspace-plugins
-  plugins:
+  devworkspaceResources:
     web-terminal:
       kind: DevWorkspaceTemplate
       apiVersion: workspace.devfile.io/v1alpha2
