--- a/pkg/flatten/testdata/plugin-id/error_fetch-unparseable-file.yaml
+++ b/pkg/flatten/testdata/plugin-id/error_fetch-unparseable-file.yaml
@@ -7,7 +7,7 @@ input:
         plugin:
           id: my/test/plugin
           registryUrl: "https://test-registry.io/subpath"
-  plugins:
+  devworkspaceResources:
     "https://test-registry.io/subpath/my/test/plugin":
       metadata:
         name: test-plugin
