--- a/pkg/flatten/testdata/plugin-id/resolve-devworkspace-instead-of-devfile.yaml
+++ b/pkg/flatten/testdata/plugin-id/resolve-devworkspace-instead-of-devfile.yaml
@@ -7,7 +7,7 @@ input:
         plugin:
           id: my/test/plugin
           registryUrl: "https://test-registry.io/subpath"
-  plugins:
+  devworkspaceResources:
     "https://test-registry.io/subpath/my/test/plugin":
       kind: DevWorkspaceTemplate
       apiVersion: workspace.devfile.io/v1alpha2
