Add tests to cover attributes on merged devfiles
Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/pkg/flatten/testdata/parent/resolve-parent-by-id.yaml
+++ b/pkg/flatten/testdata/parent/resolve-parent-by-id.yaml
@@ -33,6 +33,8 @@ output:
   workspace:
     components:
       - name: parent-component
+        attributes:
+          library.devfile.io/imported-by: parent
         container:
           image: test-img
           env:
