--- a/pkg/flatten/testdata/parent/resolve-parent-by-uri.yaml
+++ b/pkg/flatten/testdata/parent/resolve-parent-by-uri.yaml
@@ -32,6 +32,8 @@ output:
   workspace:
     components:
       - name: parent-component
+        attributes:
+          library.devfile.io/imported-by: parent
         container:
           image: test-img
           env:
