Add changelog gen, move updateApi script
Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,8 @@ main
 # File created running tests
 tests/**/tmp/
 
+# Mac related files
 .DS_Store
+
+# Release utility changelog files
+CHANGELOG.md
