Update code coverage reporting
Signed-off-by: John Collier <jcollier@redhat.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -45,9 +45,6 @@ jobs:
 
     - name: Run Go Tests
       run: make test
-      
-    - name: Upload Test Coverage results
-      uses: actions/upload-artifact@v2
-      with:
-        name: lib-test-coverage-html
-        path: tests/v2/lib-test-coverage.html
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v2.1.0
