add license header template and update PR workflow
Signed-off-by: Kim Tsao <ktsao@redhat.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -43,6 +43,15 @@ jobs:
           exit 1
         fi
 
+    - name: Check license
+      run: |
+        make check_license
+        if [[ ! -z $(git status -s) ]]
+        then
+          echo "license headers are missing : $(git status -s)"
+          exit 1
+        fi        
+
     - name: Run Go Tests
       run: make test
 
