--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Setup Go environment
       uses: actions/setup-go@v2.1.3
       with:
-        go-version: 1.15
+        go-version: 1.16
       id: go
 
     - name: Check out code into the Go module directory
@@ -42,6 +42,18 @@ jobs:
           echo "not well formatted sources are found : $(git status -s)"
           exit 1
         fi
+
+    - name: Check license
+      run: |
+        go get github.com/google/addlicense@latest
+        git reset HEAD --hard
+        make check_license          
+        if [[ $? != 0 ]]
+        then
+          echo "not well formatted sources are found:"
+          git --no-pager diff
+          exit 1
+        fi      
 
     - name: Run Go Tests
       run: make test
