--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -68,11 +68,11 @@ jobs:
           exit 1
         fi   
 
-    - name: Upload Gosec results
-      uses: actions/upload-artifact@v2
+    - name: Upload SARIF file
+      uses: github/codeql-action/upload-sarif@v1
       with:
-        name: gosec-results
-        path: gosec.json
+        # Path to SARIF file relative to the root of the repository
+        sarif_file: gosec.sarif
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2.1.0
