fix gosec action to 2.14 to prevent breakage (#163)
* fix gosec action to 2.14 to prevent breakage

Signed-off-by: Kim Tsao <ktsao@redhat.com>

* fix gosec action to 2.14 to prevent breakage

Signed-off-by: Kim Tsao <ktsao@redhat.com>

* fix version format

Signed-off-by: Kim Tsao <ktsao@redhat.com>

---------

Signed-off-by: Kim Tsao <ktsao@redhat.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -60,7 +60,7 @@ jobs:
 
     - name: Run Gosec Security Scanner
       run: |
-        go install github.com/securego/gosec/v2/cmd/gosec@latest
+        go install github.com/securego/gosec/v2/cmd/gosec@v2.14.0
         make gosec
         if [[ $? != 0 ]]
         then
