--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,7 @@
     "configurations": [
         {
             "useApiV1": false,
-            "name": "Debug operator",
+            "name": "Debug parser",
             "type": "go",
             "request": "launch",
             "mode": "auto",
