Add tests and token support for YAML parser from URL
Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

--- a/.codecov.yaml
+++ b/.codecov.yaml
@@ -29,6 +29,8 @@ coverage:
     - "vendor/*"
     - "Makefile"
     - ".travis.yml"
+    - "pkg/devfile/parser/util/mock.go"
+    - "pkg/util/mock.go"
 
 # See http://docs.codecov.io/docs/pull-request-comments-1
 comment:
