--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -17,6 +17,10 @@ on:
   push:
     branches:
       - main
+
+# Declare default permissions as read only.
+permissions: read-all
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-20.04
