--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,6 +20,9 @@ on:
   pull_request:
     branches: [ main ]
 
+# Declare default permissions as read only.
+permissions: read-all
+
 jobs:
 
   build:
