--- a/.github/workflows/proxy-warming.yml
+++ b/.github/workflows/proxy-warming.yml
@@ -21,6 +21,9 @@ on:
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+'
 
+# Declare default permissions as read only.
+permissions: read-all
+
 jobs:
   build:
     name: Renew documentation
