add write permission for sarif file
Signed-off-by: Jordan Dubrick <jdubrick@redhat.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,10 +24,14 @@ on:
 permissions: read-all
 
 jobs:
-
+  
   build:
     name: Build
     runs-on: ubuntu-latest
+    
+    permissions:
+      security-events: write
+
     steps:
 
     - name: Check out code into the Go module directory
