--- a/tests/v2/devfiles/samples/Test_Parent_RegistryURL.yaml
+++ b/tests/v2/devfiles/samples/Test_Parent_RegistryURL.yaml
@@ -2,6 +2,7 @@ schemaVersion: 2.2.2
 parent:
   id: nodejs
   registryUrl: "https://registry.stage.devfile.io"
+  version: 2.2.1
   commands:
   - id: run
     exec:
